updated code for register form

--- a/acc-register.html
+++ b/acc-register.html
@@ -74,6 +74,7 @@
     </main>
     <div class="cart-main" id="cartContent"></div>
     <footer id="footer"></footer>
+    <script src="js/register.js"></script>
     <script src="js/headerFooterLoader.js"></script>
     <script src="js/common.js"></script>
     <script src="js/cartContentLoader.js"></script>
