--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
   </head>
   <body>
+    <script src="/js/register.js"></script>
     <header id="header"></header>
     <main class="container">
       <section class="hero-section">
