--- a/acc-login.html
+++ b/acc-login.html
@@ -22,7 +22,7 @@
         <h1>Login to Your Account</h1>
 
         <div class="login-form-container">
-          <form action="#" method="post">
+          <form method="post" class="login-form">
             <div class="input-group">
               <label for="email">Email Address</label>
               <input
@@ -65,8 +65,8 @@
     </main>
     <div class="cart-main" id="cartContent"></div>
     <footer id="footer"></footer>
+    <script src="js/login.js"></script>
     <script src="js/headerFooterLoader.js"></script>
-
     <script src="js/cartContentLoader.js"></script>
     <script src="js/script.js"></script>
     <script src="js/common.js"></script>
